fix: hide overflow-y on menu open, thus add menu--opened class to body

--- a/app/static/app/menu.css
+++ b/app/static/app/menu.css
@@ -82,7 +82,11 @@
         padding: 10px 0;
     }
 
-    .menu--opened .menu {
+    body.menu--opened {
+        overflow-y: hidden;
+    }
+
+    body.menu--opened .menu {
         display: flex;
     }
 }
